Frontend working test example with ReactJs.
Uses webpack with babel to transpile jsx to js. Install webpack with
gradle frontend:installWebpack. Install React with gradle
frontend:installReact. Compile with gradle frontend:webpack.

--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>ReactJS test</title>
 </head>
 <body>
-    <div id="react"></div>
-    <script src="../../../../../frontend/src/react/Index.js"></script>
+    <div id="content"></div>
+    <script src="bundle.js"></script>
 </body>
 </html>
