--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li ui-sref-active="active">
-                    <a ui-sref="mapview" ng-click="vm.collapseNavbar()">
+                    <a ui-sref="mapview" ng-click="vm.collapseNavbar()" ng-switch-when="true">
                         <span class="glyphicon glyphicon-globe"></span>
                         <span class="hidden-sm">Map</span>
                     </a>
