--- a/src/main/webapp/content/css/custom.css
+++ b/src/main/webapp/content/css/custom.css
@@ -10,3 +10,7 @@ canvas#concertMap {
     width: 100%;
     background-image: url("/content/images/grid15x15.png");
 }
+
+.modal-footer form {
+    display: inline-block;
+}
