Resize the image automatically

--- a/src/main/webapp/content/css/custom.css
+++ b/src/main/webapp/content/css/custom.css
@@ -11,6 +11,8 @@ OVERRIDE ALL CSS SETTINGS
 canvas#concertMap {
     width: 100%;
     background-image: url("/content/images/concertzaal.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .modal-footer form {
