Changed scriptingview to scripting and added 'new cue' dialog

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -22,7 +22,7 @@
                     </a>
                 </li>
                 <li ui-sref-active="active">
-                    <a ui-sref="scriptingview" ng-click="vm.collapseNavbar()" ng-switch-when="true">
+                    <a ui-sref="scripting" ng-click="vm.collapseNavbar()" ng-switch-when="true">
                         <span class="glyphicon glyphicon-book"></span>
                         <span class="hidden-sm">Scripting</span>
                     </a>
