--- a/src/main/webapp/content/css/custom.css
+++ b/src/main/webapp/content/css/custom.css
@@ -2,6 +2,10 @@
 OVERRIDE ALL CSS SETTINGS
 */
 
+.centered {
+    text-align: center;
+}
+
 @media (min-width: 768px) {
     .container {
         width: 95%;
