--- a/src/main/webapp/content/css/bootstrap-material-design.css
+++ b/src/main/webapp/content/css/bootstrap-material-design.css
@@ -2313,8 +2313,7 @@ fieldset[disabled] .navbar .btn-link:focus {
 }
 .navbar,
 .navbar.navbar-default {
-  /*background-color: #009688;*/
-  background-color: #3c6666;
+  background-color: #009688;
   color: rgba(255,255,255, 0.84);
 }
 .navbar .navbar-form .form-group input.form-control::-moz-placeholder,
