--- a/src/main/webapp/content/css/vertical-timeline.css
+++ b/src/main/webapp/content/css/vertical-timeline.css
@@ -51,6 +51,7 @@
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
     animation-duration: 0.5s;
     animation-name: cd-bounce-2;
+    transition: all 0.5s ease-in;
 }
 
 .timeline > li > .timeline-panel:before {
@@ -361,5 +362,13 @@
 }
 
 .timeline-focus {
-    color: green;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.timeline-focus h4 {
+    color: deepskyblue;
 }
