--- a/src/main/webapp/content/css/vertical-timeline.css
+++ b/src/main/webapp/content/css/vertical-timeline.css
@@ -372,3 +372,9 @@
 .timeline-focus h4 {
     color: deepskyblue;
 }
+
+.navigation-buttons {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
