--- a/src/main/webapp/content/css/custom.css
+++ b/src/main/webapp/content/css/custom.css
@@ -12,11 +12,14 @@ OVERRIDE ALL CSS SETTINGS
     }
 }
 
-canvas#concertMap {
+.preview {
     width: 100%;
-    background-image: url("/content/images/concertzaal.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
+}
+
+.no-preview {
+    background-image: url("/content/images/no-preview.jpg");
 }
 
 .modal-footer form {
