--- a/src/main/webapp/content/css/custom.css
+++ b/src/main/webapp/content/css/custom.css
@@ -15,7 +15,14 @@ OVERRIDE ALL CSS SETTINGS
 #pdf-viewer {
     width: 100%;
     height: 900px;
+}
 
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
 }
 
 .preview {
