Added message in scripting view

--- a/src/main/webapp/content/css/custom.css
+++ b/src/main/webapp/content/css/custom.css
@@ -25,6 +25,9 @@ OVERRIDE ALL CSS SETTINGS
     float: right;
 }
 
+td.selection-display {
+    width: 50%;
+}
 .preview {
     width: 100%;
     background-repeat: no-repeat;
